--- a/index.html
+++ b/index.html
@@ -5,36 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Handlee&display=swap"
+      rel="stylesheet"
+    />
     <title>chernovik</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <a href="#" class="nav-branding">Alex's Bolych Tarot</a>
-        <ul class="nav-menu">
-          <li class="nav-item">
-            <a href="#" class="nav-link">Home</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">About</a>
-          </li>
-          <li class="nav-item">
-            <a href="#" class="nav-link">Contact</a>
-          </li>
-        </ul>
-        <div class="hamburger">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
+    <div class="content">
+      <header>
+        <nav class="navbar">
+          <a href="#" class="nav-branding">Alex's Bolych Tarot</a>
+
+          <ul class="nav-menu">
+            <li class="nav-item">
+              <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link">Contact</a>
+            </li>
+          </ul>
+          <div class="hamburger">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+        </nav>
+      </header>
+      <div id="prediction">
+        <div id="cards">
+          <img id="deck" src="backside.jpg" alt="" />
+          <!-- <img id="result" src="CHARIOT.jpg" alt="" /> -->
         </div>
-      </nav>
-    </header>
-    <div id="prediction">
-      <div id="cards">
-        <img id="deck" src="backside.jpg" alt="" />
-        <!-- <img id="result" src="CHARIOT.jpg" alt="" /> -->
       </div>
+      <div></div>
+      <script src="app.js"></script>
     </div>
-    <script src="app.js"></script>
   </body>
 </html>
