--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
           </div>
         </nav>
       </header>
+      <div class="text-after-heading">
+        <h1>Know the truth about yourself...</h1>
+        <h2>Or others...</h2>
+      </div>
       <div id="prediction">
         <div id="cards">
           <img id="deck" src="backside.jpg" alt="" />
@@ -49,3 +53,4 @@
     </div>
   </body>
 </html>
+
