--- a/index.html
+++ b/index.html
@@ -22,13 +22,15 @@
 
           <ul class="nav-menu">
             <li class="nav-item">
-              <a href="#" class="nav-link">Home</a>
+              <a href="https://learn.javascript.ru/" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">About</a>
+              <a href="https://learn.javascript.ru/" class="nav-link">About</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link">Contact</a>
+              <a href="https://learn.javascript.ru/" class="nav-link"
+                >Contact</a
+              >
             </li>
           </ul>
           <div class="hamburger">
@@ -39,8 +41,8 @@
         </nav>
       </header>
       <div class="text-after-heading">
-        <h1>Know the truth about yourself...</h1>
-        <h2>Or others...</h2>
+        <!-- <h1>Know the truth about yourself...</h1>
+          <h2>Or others...</h2> -->
       </div>
       <div id="prediction">
         <div id="cards">
@@ -48,9 +50,10 @@
           <!-- <img id="result" src="CHARIOT.jpg" alt="" /> -->
         </div>
       </div>
-      <div></div>
-      <script src="app.js"></script>
+      <div class="text-after-prediction">Do you know what it could mean?</div>
     </div>
+    <script src="app.js"></script>
   </body>
 </html>
+
 
