--- a/index.html
+++ b/index.html
@@ -22,14 +22,16 @@
 
           <ul class="nav-menu">
             <li class="nav-item">
-              <a href="https://learn.javascript.ru/" class="nav-link">Home</a>
-            </li>
-            <li class="nav-item">
-              <a href="https://learn.javascript.ru/" class="nav-link">About</a>
+              <a href="https://learn.javascript.ru/" class="nav-link">Учи js</a>
             </li>
             <li class="nav-item">
               <a href="https://learn.javascript.ru/" class="nav-link"
-                >Contact</a
+                >Внатуре учи</a
+              >
+            </li>
+            <li class="nav-item">
+              <a href="https://learn.javascript.ru/" class="nav-link"
+                >Я не шучу учи</a
               >
             </li>
           </ul>
@@ -55,5 +57,4 @@
     <script src="app.js"></script>
   </body>
 </html>
-
 
