--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
       </div>
       <div class="text-after-prediction">
-        <h7>Want to know more about this?</h7>
+        <h5>Want to know more about this?</h5>
         <div class="confirm">
           <button id="yes-tarot">yes</button>
           <button id="no-tarot">no</button>
@@ -135,7 +135,9 @@
         </table>
 
         <span id="numerology-question"><h6>Or maybe about this?</h6></span>
-        <span id="text-after-question">or even more...</span>
+        <span id="text-after-question"
+          >or even <a id="btn-main" href="">more...</a></span
+        >
         <div class="numerology-name-field">
           <table id="numerology-table-name">
             <tbody>
@@ -187,3 +189,4 @@
     <script src="app.js"></script>
   </body>
 </html>
+
