--- a/index.html
+++ b/index.html
@@ -21,27 +21,21 @@
           <a href="index.html" class="nav-branding"
             >Alex's Bolych Magic Experince</a
           >
-
           <ul class="nav-menu">
             <li class="nav-item">
-              <a href="https://learn.javascript.ru/" class="nav-link"
-                >About Tarot</a
-              >
+              <a href="tarot.html" class="nav-link">About Tarot</a>
             </li>
             <li class="nav-item">
-              <a href="https://learn.javascript.ru/" class="nav-link"
-                >About Numerology</a
-              >
+              <a href="numerology.html" class="nav-link">About Numerology</a>
             </li>
             <li class="nav-item">
-              <a href="https://learn.javascript.ru/" class="nav-link"
-                >About Palm Reading</a
-              >
+              <a href="palm.html" class="nav-link">About Palm Reading</a>
             </li>
             <li class="nav-item">
-              <a href="https://learn.javascript.ru/" class="nav-link"
-                >About Alex Bolych</a
-              >
+              <a href="bolych.html" class="nav-link">About Alex Bolych</a>
+            </li>
+            <li class="nav-item">
+              <a href="contacts.html" class="nav-link">Contacts</a>
             </li>
           </ul>
           <div class="hamburger">
@@ -51,10 +45,6 @@
           </div>
         </nav>
       </header>
-      <div class="text-after-heading">
-        <!-- <h1>Know the truth about yourself...</h1>
-          <h2>Or others...</h2> -->
-      </div>
       <div id="prediction">
         <div id="cards">
           <img id="deck" src="backside.jpg" alt="" />
@@ -136,7 +126,7 @@
 
         <span id="numerology-question"><h6>Or maybe about this?</h6></span>
         <span id="text-after-question"
-          >or even <a id="btn-main" href="">more...</a></span
+          >or even <a id="btn-main" href="bolych.html">more...</a></span
         >
         <div class="numerology-name-field">
           <table id="numerology-table-name">
@@ -155,33 +145,26 @@
               </tr>
             </tbody>
           </table>
-          <div class="tablee">
-            <table class="numerology-result">
-              <tbody>
-                <tr>
-                  <td>Destiny number <b class="big-number gold">9</b></td>
-                </tr>
-                <!-- <tr>
-                  <td>Soul urge number?? <b class="big-number green">7</b></td>
-                </tr> -->
-                <tr>
-                  <td>Dream number <b class="big-number blue">11</b></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-          <div class="tablee">
-            <table class="numerology-result">
-              <tbody>
-                <!-- <tr>
-                  <td>Personality number <b class="big-number orange">5</b></td>
-                </tr> -->
-                <tr>
-                  <td>Heart desire number <b class="big-number red">7</b></td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+
+          <table class="numerology-result">
+            <tbody>
+              <tr>
+                <td>Destiny number <b class="big-number gold">9</b></td>
+              </tr>
+
+              <tr>
+                <td>Dream number <b class="big-number blue">11</b></td>
+              </tr>
+            </tbody>
+          </table>
+
+          <table class="numerology-result">
+            <tbody>
+              <tr>
+                <td>Heart desire number <b class="big-number red">7</b></td>
+              </tr>
+            </tbody>
+          </table>
         </div>
       </div>
     </div>
@@ -189,4 +172,3 @@
     <script src="app.js"></script>
   </body>
 </html>
-
