--- a/index.html
+++ b/index.html
@@ -16,48 +16,49 @@
   </head>
   <body>
     <div class="content">
-      <header>
-        <nav class="navbar">
-          <a href="index.html" class="nav-branding"
-            >Alex's Bolych Magic Experince</a
-          >
-          <ul class="nav-menu">
-            <li class="nav-item">
-              <a href="tarot.html" class="nav-link">About Tarot</a>
-            </li>
-            <li class="nav-item">
-              <a href="numerology.html" class="nav-link">About Numerology</a>
-            </li>
-            <li class="nav-item">
-              <a href="palm.html" class="nav-link">About Palm Reading</a>
-            </li>
-            <li class="nav-item">
-              <a href="bolych.html" class="nav-link">About Alex Bolych</a>
-            </li>
-            <li class="nav-item">
-              <a href="contacts.html" class="nav-link">Contacts</a>
-            </li>
-          </ul>
-          <div class="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+      <div class="tarot">
+        <header>
+          <nav class="navbar">
+            <a href="index.html" class="nav-branding"
+              >Alex's Bolych Magic Experince</a
+            >
+            <ul class="nav-menu">
+              <li class="nav-item">
+                <a href="tarot.html" class="nav-link">About Tarot</a>
+              </li>
+              <li class="nav-item">
+                <a href="numerology.html" class="nav-link">About Numerology</a>
+              </li>
+              <li class="nav-item">
+                <a href="palm.html" class="nav-link">About Palm Reading</a>
+              </li>
+              <li class="nav-item">
+                <a href="bolych.html" class="nav-link">About Alex Bolych</a>
+              </li>
+              <li class="nav-item">
+                <a href="contacts.html" class="nav-link">Contacts</a>
+              </li>
+            </ul>
+            <div class="hamburger">
+              <span class="bar"></span>
+              <span class="bar"></span>
+              <span class="bar"></span>
+            </div>
+          </nav>
+        </header>
+        <div id="prediction">
+          <div id="cards">
+            <img id="deck" src="backside.jpg" alt="" />
           </div>
-        </nav>
-      </header>
-      <div id="prediction">
-        <div id="cards">
-          <img id="deck" src="backside.jpg" alt="" />
+        </div>
+        <div class="text-after-prediction">
+          <h5>Want to know more about this?</h5>
+          <div class="confirm">
+            <button id="yes-tarot">yes</button>
+            <button id="no-tarot">no</button>
+          </div>
         </div>
       </div>
-      <div class="text-after-prediction">
-        <h5>Want to know more about this?</h5>
-        <div class="confirm">
-          <button id="yes-tarot">yes</button>
-          <button id="no-tarot">no</button>
-        </div>
-      </div>
-
       <div id="numerology">
         <table id="numerology-table">
           <tbody>
@@ -151,15 +152,14 @@
               <tr>
                 <td>Destiny number <b class="big-number gold">9</b></td>
               </tr>
-
-              <tr>
-                <td>Dream number <b class="big-number blue">11</b></td>
-              </tr>
             </tbody>
           </table>
 
           <table class="numerology-result">
             <tbody>
+              <tr>
+                <td>Dream number <b class="big-number blue">11</b></td>
+              </tr>
               <tr>
                 <td>Heart desire number <b class="big-number red">7</b></td>
               </tr>
