--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <div id="prediction">
           <div id="cards">
             <img id="deck" src="backside.jpg" alt="" />
+            <span id="push">Push the deck</span>
           </div>
         </div>
         <div class="text-after-prediction">
