--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
         <span id="numerology-question"><h6>Or maybe about this?</h6></span>
         <span id="text-after-question"
-          >or even <a id="btn-main" href="bolych.html">more...</a></span
+          >or other <a id="btn-main" href="bolych.html">supernatural stuff</a></span
         >
         <div class="numerology-name-field">
           <table id="numerology-table-name">
