--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           </div>
         </div>
         <div class="text-after-prediction">
-          <h5>Want to know more about this?</h5>
+          <span>Want to know more about this?</span>
           <div class="confirm">
             <button id="yes-tarot">yes</button>
             <button id="no-tarot">no</button>
@@ -61,75 +61,132 @@
         </div>
       </div>
       <div id="numerology">
-        <table id="numerology-table">
-          <tbody>
-            <tr id="numerology-table-top-row">
-              <td>1</td>
-              <td>2</td>
-              <td>3</td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-            </tr>
-            <tr>
-              <td>A</td>
-              <td>B</td>
-              <td>C</td>
-              <td>D</td>
-              <td>E</td>
-              <td>U</td>
-              <td>O</td>
-              <td>F</td>
-            </tr>
-            <tr>
-              <td>I</td>
-              <td>K</td>
-              <td>G</td>
-              <td>M</td>
-              <td>H</td>
-              <td>V</td>
-              <td>Z</td>
-              <td>P</td>
-            </tr>
-            <tr>
-              <td>J</td>
-              <td>R</td>
-              <td>L</td>
-              <td>T</td>
-              <td>N</td>
-              <td>W</td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Q</td>
-              <td></td>
-              <td>S</td>
-              <td></td>
-              <td>X</td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-            <tr>
-              <td>Y</td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
+        <div id="other-predictions">
+          <!-- <table id="numerology-table">
+            <tbody>
+              <tr id="numerology-table-top-row">
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+                <td>7</td>
+                <td>8</td>
+              </tr>
+              <tr>
+                <td>A</td>
+                <td>B</td>
+                <td>C</td>
+                <td>D</td>
+                <td>E</td>
+                <td>U</td>
+                <td>O</td>
+                <td>F</td>
+              </tr>
+              <tr>
+                <td>I</td>
+                <td>K</td>
+                <td>G</td>
+                <td>M</td>
+                <td>H</td>
+                <td>V</td>
+                <td>Z</td>
+                <td>P</td>
+              </tr>
+              <tr>
+                <td>J</td>
+                <td>R</td>
+                <td>L</td>
+                <td>T</td>
+                <td>N</td>
+                <td>W</td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Q</td>
+                <td></td>
+                <td>S</td>
+                <td></td>
+                <td>X</td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+              <tr>
+                <td>Y</td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+                <td></td>
+              </tr>
+            </tbody>
+          </table> -->
 
+          <div class="carousel-slide">
+            <img
+              class="img-supernatural"
+              src="./supernatural/ouija.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/palm.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/runes.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/satanic.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/summoning.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/ouija.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/satan.webp"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/satanic.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/summoning2.jpg"
+              alt=""
+            />
+            <img
+              class="img-supernatural"
+              src="./supernatural/necronomicon.jpg"
+              alt=""
+            />
+          </div>
+        </div>
+<div class="numerology-questions">
         <span id="numerology-question"><h6>Or maybe about this?</h6></span>
         <span id="text-after-question"
-          >or other <a id="btn-main" href="bolych.html">supernatural stuff</a></span
+          >or other
+          <a id="btn-main" href="bolych.html">supernatural stuff</a></span
         >
+      </div>
         <div class="numerology-name-field">
           <table id="numerology-table-name">
             <tbody>
