--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.41,
+    maximum-scale=1"" />
     <link rel="stylesheet" href="style.css" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -180,13 +181,13 @@
             />
           </div>
         </div>
-<div class="numerology-questions">
-        <span id="numerology-question"><h6>Or maybe about this?</h6></span>
-        <span id="text-after-question"
-          >or other
-          <a id="btn-main" href="bolych.html">supernatural stuff</a></span
-        >
-      </div>
+        <div class="numerology-questions">
+          <span id="numerology-question"><h6>Or maybe about this?</h6></span>
+          <span id="text-after-question"
+            >or other
+            <a id="btn-main" href="bolych.html">supernatural stuff</a></span
+          >
+        </div>
         <div class="numerology-name-field">
           <table id="numerology-table-name">
             <tbody>
