--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             >
             <ul class="nav-menu">
               <li class="nav-item">
+                <a href="index.html" class="nav-link">Main</a>
+              </li>
+              <li class="nav-item">
                 <a href="tarot.html" class="nav-link">About Tarot</a>
               </li>
               <li class="nav-item">
@@ -56,7 +59,13 @@
         <div class="text-after-prediction">
           <span>Want to know more about this?</span>
           <div class="confirm">
-            <button id="yes-tarot">yes</button>
+            <button
+              onclick="location.href='tarot.html'"
+              type="button"
+              id="yes-tarot"
+            >
+              yes
+            </button>
             <button id="no-tarot">no</button>
           </div>
         </div>
@@ -128,58 +137,71 @@
             </tbody>
           </table> -->
 
-          <div class="carousel-slide">
-            <img
-              class="img-supernatural"
-              src="./supernatural/ouija.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/palm.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/runes.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/satanic.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/summoning.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/ouija.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/satan.webp"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/satanic.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/summoning2.jpg"
-              alt=""
-            />
-            <img
-              class="img-supernatural"
-              src="./supernatural/necronomicon.jpg"
-              alt=""
-            />
-          </div>
+          <ul class="carousel-slide">
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/ouija.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/palm.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/runes.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/summoning.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/ouija.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/satan.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/satanic.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/runes.jpg"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                class="img-supernatural"
+                src="./supernatural/necronomicon.jpg"
+                alt=""
+              />
+            </li>
+          </ul>
         </div>
         <div class="numerology-questions">
           <span id="numerology-question"><h6>Or maybe about this?</h6></span>
