--- a/index.html
+++ b/index.html
@@ -37,10 +37,7 @@
                 <a href="palm.html" class="nav-link">About Palm Reading</a>
               </li>
               <li class="nav-item">
-                <a href="bolych.html" class="nav-link">About Alex Bolych</a>
-              </li>
-              <li class="nav-item">
-                <a href="contacts.html" class="nav-link">Contacts</a>
+                <a href="bolych.html" class="nav-link">About this place</a>
               </li>
             </ul>
             <div class="hamburger">
@@ -62,81 +59,17 @@
             <button
               onclick="location.href='tarot.html'"
               type="button"
+              class="yes-btn"
               id="yes-tarot"
             >
               yes
             </button>
-            <button id="no-tarot">no</button>
+            <button class="no-btn" id="no-tarot">no</button>
           </div>
         </div>
       </div>
       <div id="numerology">
         <div id="other-predictions">
-          <!-- <table id="numerology-table">
-            <tbody>
-              <tr id="numerology-table-top-row">
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-                <td>5</td>
-                <td>6</td>
-                <td>7</td>
-                <td>8</td>
-              </tr>
-              <tr>
-                <td>A</td>
-                <td>B</td>
-                <td>C</td>
-                <td>D</td>
-                <td>E</td>
-                <td>U</td>
-                <td>O</td>
-                <td>F</td>
-              </tr>
-              <tr>
-                <td>I</td>
-                <td>K</td>
-                <td>G</td>
-                <td>M</td>
-                <td>H</td>
-                <td>V</td>
-                <td>Z</td>
-                <td>P</td>
-              </tr>
-              <tr>
-                <td>J</td>
-                <td>R</td>
-                <td>L</td>
-                <td>T</td>
-                <td>N</td>
-                <td>W</td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Q</td>
-                <td></td>
-                <td>S</td>
-                <td></td>
-                <td>X</td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-              <tr>
-                <td>Y</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-              </tr>
-            </tbody>
-          </table> -->
-
           <ul class="carousel-slide">
             <li>
               <img
@@ -205,10 +138,24 @@
         </div>
         <div class="numerology-questions">
           <span id="numerology-question"><h6>Or maybe about this?</h6></span>
-          <span id="text-after-question"
-            >or other
-            <a id="btn-main" href="bolych.html">supernatural stuff</a></span
-          >
+          <span id="text-after-question">or other supernatural stuff?</span>
+          <div class="confirm-end">
+            <button
+              onclick="location.href='bolych.html'"
+              type="button"
+              class="yes-btn"
+              id="yes-end"
+            >
+              yes
+            </button>
+            <button
+              onclick="location.href='http://google.com'"
+              class="no-btn"
+              id="no-end"
+            >
+              no
+            </button>
+          </div>
         </div>
         <div class="numerology-name-field">
           <table id="numerology-table-name">
