--- a/palm.html
+++ b/palm.html
@@ -24,6 +24,9 @@
           >
           <ul class="nav-menu">
             <li class="nav-item">
+              <a href="index.html" class="nav-link">Main</a>
+            </li>
+            <li class="nav-item">
               <a href="tarot.html" class="nav-link">About Tarot</a>
             </li>
             <li class="nav-item">
@@ -33,10 +36,7 @@
               <a href="palm.html" class="nav-link">About Palm Reading</a>
             </li>
             <li class="nav-item">
-              <a href="bolych.html" class="nav-link">About Alex Bolych</a>
-            </li>
-            <li class="nav-item">
-              <a href="contacts.html" class="nav-link">Contacts</a>
+              <a href="bolych.html" class="nav-link">About this place</a>
             </li>
           </ul>
           <div class="hamburger">
@@ -47,7 +47,14 @@
         </nav>
       </header>
     </div>
-
+    <div class="container-temporary">
+      <h1>Palm reading</h1>
+      <p>
+        Info about palm reading, suggestion to contact Alex Bolych and start
+        doing tarot reading, palm reading e.t.c
+      </p>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
+
