--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
         <div id="prediction">
           <div id="cards">
             <img id="deck" src="backside.jpg" alt="" />
-            <span id="push">Push the deck</span>
+            <span id="push"
+              >Push the deck <br />
+              <br />
+              And draw 6 cards</span
+            >
           </div>
         </div>
         <div class="text-after-prediction">
