--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <a href="palm.html" class="nav-link">About Palm Reading</a>
               </li>
               <li class="nav-item">
-                <a href="bolych.html" class="nav-link">About this place</a>
+                <a href="faq.html" class="nav-link">F.A.Q.</a>
               </li>
             </ul>
             <div class="hamburger">
@@ -50,10 +50,10 @@
         <div id="prediction">
           <div id="cards">
             <img id="deck" src="backside.jpg" alt="" />
-            <span id="push"
-              >Push the deck <br />
+            <span class="greeting"
+              >Wellcome, friend! <br />
               <br />
-              And draw 6 cards</span
+              <span id="push"> Push the deck and draw 6 cards</span></span
             >
           </div>
         </div>
@@ -77,6 +77,7 @@
           <ul class="carousel-slide">
             <li>
               <img
+                title="Ouija board"
                 class="img-supernatural"
                 src="./supernatural/ouija.jpg"
                 alt=""
@@ -84,6 +85,7 @@
             </li>
             <li>
               <img
+                title="Palm reading"
                 class="img-supernatural"
                 src="./supernatural/palm.jpg"
                 alt=""
@@ -91,6 +93,7 @@
             </li>
             <li>
               <img
+                title="Runes"
                 class="img-supernatural"
                 src="./supernatural/runes.jpg"
                 alt=""
@@ -98,20 +101,16 @@
             </li>
             <li>
               <img
+                title="Spirital sessions"
                 class="img-supernatural"
                 src="./supernatural/summoning.jpg"
                 alt=""
               />
             </li>
+
             <li>
               <img
-                class="img-supernatural"
-                src="./supernatural/ouija.jpg"
-                alt=""
-              />
-            </li>
-            <li>
-              <img
+                title="Summonings"
                 class="img-supernatural"
                 src="./supernatural/satan.webp"
                 alt=""
@@ -119,6 +118,7 @@
             </li>
             <li>
               <img
+                title="Rituals"
                 class="img-supernatural"
                 src="./supernatural/satanic.jpg"
                 alt=""
@@ -126,6 +126,7 @@
             </li>
             <li>
               <img
+                title="Runes"
                 class="img-supernatural"
                 src="./supernatural/runes.jpg"
                 alt=""
@@ -133,6 +134,7 @@
             </li>
             <li>
               <img
+                title="Forbidden literature"
                 class="img-supernatural"
                 src="./supernatural/necronomicon.jpg"
                 alt=""
@@ -141,7 +143,7 @@
           </ul>
         </div>
         <div class="numerology-questions">
-          <span id="numerology-question"><h6>Or maybe about this?</h6></span>
+          <span id="numerology-question">Or maybe about this?</span>
           <span id="text-after-question">or other supernatural stuff?</span>
           <div class="confirm-end">
             <button
@@ -152,13 +154,7 @@
             >
               yes
             </button>
-            <button
-              onclick="location.href='http://google.com'"
-              class="no-btn"
-              id="no-end"
-            >
-              no
-            </button>
+            <button class="no-btn" id="no-end">no</button>
           </div>
         </div>
         <div class="numerology-name-field">
@@ -204,3 +200,4 @@
     <script src="app.js"></script>
   </body>
 </html>
+
