--- a/bolych.html
+++ b/bolych.html
@@ -36,7 +36,7 @@
               <a href="palm.html" class="nav-link">About Palm Reading</a>
             </li>
             <li class="nav-item">
-              <a href="bolych.html" class="nav-link">About this place</a>
+              <a href="faq.html" class="nav-link">F.A.Q.</a>
             </li>
           </ul>
           <div class="hamburger">
