--- a/palm.html
+++ b/palm.html
@@ -36,7 +36,7 @@
               <a href="palm.html" class="nav-link">About Palm Reading</a>
             </li>
             <li class="nav-item">
-              <a href="bolych.html" class="nav-link">About this place</a>
+              <a href="faq.html" class="nav-link">F.A.Q.</a>
             </li>
           </ul>
           <div class="hamburger">
@@ -46,15 +46,15 @@
           </div>
         </nav>
       </header>
-    </div>
-    <div class="container-temporary">
-      <h1>Palm reading</h1>
-      <p>
-        Info about palm reading, suggestion to contact Alex Bolych and start
-        doing tarot reading, palm reading e.t.c
-      </p>
+
+      <div class="container-temporary">
+        <h1>Palm reading</h1>
+        <p>
+          Info about palm reading, suggestion to contact Alex Bolych and start
+          doing tarot reading, palm reading e.t.c
+        </p>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
 </html>
-
