--- a/tarot.html
+++ b/tarot.html
@@ -20,7 +20,7 @@
       <header>
         <nav class="navbar">
           <a href="index.html" class="nav-branding"
-            >Alex's Bolych Magic Experince</a
+            >Alex's Bolych Magic Experience</a
           >
           <ul class="nav-menu">
             <li class="nav-item">
